[project]
name = "pivotal-solver"
authors = [{ name = "Tomas Roun", email = "tomas.roun8@gmail.com" }]
description = "High-level Linear Programming solver using the Simplex algorithm"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "linear programming",
    "linear programming solver",
    "lp solver",
    "lp",
    "solver",
    "linprog",
    "numerical optimization",
    "convex optimization",
    "simplex",
    "simplex algorithm",
]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["numpy~=2.3.5"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-snapshot==0.9.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.9",
    "ty==0.0.1a34",
]

[project.urls]
Homepage = "https://github.com/tomasr8/pivotal"
GitHub = "https://github.com/tomasr8/pivotal"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN002",
    "ANN003",
    "RET503",
    "C901",
    "COM812",
    "ERA",
    "ISC001",
    "N802",
    "N803",
    "N806",
    "N818",
    "S101",
    "PLR",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "PLR2004"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.hatch.build.targets.wheel]
packages = ["pivotal"]

[tool.hatch.version]
path = "pivotal/__init__.py"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"
